--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
 <body>
   <header id="main-header" class="bg-success text-white p-4 mb-3">
     <div class="container">
-      <h1 id="header-title">Item Lister <span style="display:none">123</span></h1>
+      <div class="row">
+        <h1 id="header-title">Item Lister <span style="display:none">123</span></h1>
+        <div class="col-md-6 align-self-center">
+        <input type="text" class="form-control" id="filter" placeholder="Search Items...">
+        </div>
+      </div>
     </div>
   </header>
   <div class="container">
    <div id="main" class="card card-body">
     <h2 class="title">Add Items</h2>
-    <form class="form-inline mb-3">
-      <input type="text" class="form-control mr-2">
+    <form id="addForm" class="form-inline mb-3">
+      <input type="text" class="form-control mr-2" id="item">
       <select class = "form-control mr-2">
         <option value="1">1</option>
         <option value="2">2</option>
@@ -27,11 +32,11 @@
     </form>
     <h2 class="title">Items</h2>
     <ul id="items" class="list-group">
-      <li class="list-group-item">Item 1</li>
-      <li class="list-group-item">Item 2</li>
-      <li class="list-group-item">Item 3</li>
-      <li class="list-group-item">Item 4</li>
-      <li class="list-group-item">Item 5</li>
+      <li class="list-group-item">Item 1<button class="btn btn-danger btn-sm float-right delete">X</button></li>
+      <li class="list-group-item">Item 2<button class="btn btn-danger btn-sm float-right delete">X</button></li>
+      <li class="list-group-item">Item 3<button class="btn btn-danger btn-sm float-right delete">X</button></li>
+      <li class="list-group-item">Item 4<button class="btn btn-danger btn-sm float-right delete">X</button></li>
+      <li class="list-group-item">Item 5<button class="btn btn-danger btn-sm float-right delete">X</button></li>
     </ul>
     <div id="output"></div>
     <br>
